--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
                   <label for="lname">Email</label>
                   <input type="text" id="email" name="email" placeholder="Your email..">
               
-                  <label for="country">Message</label>
-                  <textarea>Message...</textarea>
+                  <label for="message">Message</label>
+                  <textarea></textarea>
                   </select>
                 
                   <input type="submit" value="Submit">
